--- a/package.json
+++ b/package.json
@@ -1,25 +1,41 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "react-scripts": "2.1.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+	"name": "my-app",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"body-parser": "^1.18.3",
+		"bootstrap": "^4.1.3",
+		"dotenv": "^6.1.0",
+		"express": "^4.16.4",
+		"nodemon": "^1.18.5",
+		"petfinder-client": "0.0.3",
+		"react": "^16.6.0",
+		"react-dom": "^16.6.0",
+		"react-scripts": "2.1.0"
+	},
+	"scripts": {
+		"format": "prettier --write \"src/**/*.{js,jsx,css,json}\"",
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"server": "nodemon server.js",
+		"lint": "eslint \"**/*.{js,jsx}\""
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"proxy": "http://localhost:5000/",
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not ie <= 11",
+		"not op_mini all"
+	],
+	"devDependencies": {
+		"eslint": "^5.8.0",
+		"eslint-config-prettier": "^3.1.0",
+		"eslint-plugin-prettier": "^3.0.0",
+		"prettier": "^1.15.1"
+	}
 }
